proj1/testing/error/badconf3.inp
* B BETA II I III
Hello